k6-test-main/ebay/ebay/ebay-policies/testing/2x/disallow-host-path-8.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-host-path-8-dev-8
  annotations:
    policies.kyverno.io/title: Disallow hostPath
    policies.kyverno.io/description: >-
      HostPath volumes let Pods use host directories and volumes in containers.
      Using host resources can be used to access shared data or escalate privileges
      and should not be allowed. This policy ensures no hostPath volumes are in use.
spec:
  validationFailureAction: enforce
  background: false
  rules:
    - name: host-path-8
      exclude:
        any:
        - resources:
            kinds:
            - Pod
            selector:
              matchExpressions:
                - key: environment.tess.io/name
                  operator: In
                  values:
                  - dev
                  - feature
                  - lnp
                  - staging
                  - stagingpci
                  - stagingrnpci
                - key: application.tess.io/name
                  operator: In
                  values:
                  - tfap-lnp
      match:
        any:
        - resources:
            kinds:
              - Pod
            namespaces:
              - tfap-lnp
            selector:
              matchExpressions:
                - key: environment.tess.io/name
                  operator: In
                  values:
                  - dev
                  - feature
                  - lnp
                  - staging
                  - stagingpci
                  - stagingrnpci
      validate:
        message: >-
          HostPath volumes are forbidden. The field spec.volumes[*].hostPath must be unset.
        pattern:
          spec:
            =(volumes):
              - X(hostPath): "null"
